source/blender/editors/space_node/link_drag_search.cc
@@ -227,7 +227,7 @@ static void link_drag_search_exec_fn(bContext *C, void *arg1, void *arg2)
   ED_node_tree_propagate_change(C, &bmain, snode.edittree);
 
   /* Start translation operator with the new node. */
-  wmOperatorType *ot = WM_operatortype_find("TRANSFORM_OT_translate", true);
+  wmOperatorType *ot = WM_operatortype_find("NODE_OT_translate_attach", true);
   BLI_assert(ot);
   PointerRNA ptr;
   WM_operator_properties_create_ptr(&ptr, ot);
